--- a/tin-tuc-01.html
+++ b/tin-tuc-01.html
@@ -213,10 +213,14 @@
               <div class="news-inner-row">
                 <div class="news-inner-col">
                   <div class="news-list">
-                    <a href="tuyen-dung.html">
-                      <!-- <i class="ic-left"></i> -->
-                      <p>Kiến thức quản trị</p>
-                    </a>
+                    <div class="news-breadcrumb">
+                      <a href="tin-tuc.html">
+                        <span>Tin tức </span>
+                      </a>
+                      <p>
+                        / Kiến thức quản trị
+                      </p>
+                    </div>
                     <h1>
                       Công nghệ số hóa ứng dụng trí tuệ nhân tạo phát triên mạnh
                       ở Việt Nam
@@ -234,90 +238,107 @@
                         phổ biến thì việc có những công nghệ đi đầu ứng dụng AI
                         như giải pháp IONE từ công ty FSI chính là một điểm sáng.
                       </span>
-                      <br>
-                      <br>
-                      Cục Thương mại điện tử và Công nghệ thông tin (Bộ Công
-                      Thương) cho biết, cách mạng công nghiệp lần thứ 4 đang và
-                      sẽ là xu thế lớn có tác động đến phát triển kinh tế - xã
-                      hội của tất cả các quốc gia. Trong đó, một trong những
-                      công nghệ quan trọng phải được kể đến là dữ liệu lớn (Big
-                      Data).
-                      <br>
-                      <br>
-                      Dữ liệu lớn sẽ là yếu tố cốt lõi để sử dụng và phát triển
-                      Internet vạn vật (IoT) và trí tuệ nhân tạo (AI). Do đó,
-                      cách thu thập và khai thác dữ liệu lớn sẽ tạo ra điểm khác
-                      biệt giữa các doanh nghiệp hoạt động trên thị trường.
-                      <br>
-                      <br>
-                      Thực tế, cả Nhà nước và doanh nghiệp đều mong muốn sử dụng
-                      hiệu quả các tiến bộ công nghệ mới nhất trong xử lý Big
-                      Data để cung cấp dịch vụ ngày càng tốt hơn, đáp ứng nhu
-                      cầu của người sử dụng, hướng tới mục tiêu là phát triển và
-                      ngày càng hoàn thiện xã hội thông tin.
-                      <br>
-                      <br>
-                      Thông qua việc ứng dụng công nghệ thông tin và truyền
-                      thông kết nối các cảm biến, mạng không dây tốc độ cao, xử
-                      lý dữ liệu lớn để nâng cao chất lượng cuộc sống, cải thiện
-                      chất lượng phục vụ của chính quyền.
-                      <br>
-                      <br>
-                      <img src="./assets/img/tintuc/news-img1-tt01.png" alt="" />
-                      <br>
-                      Ông Nguyễn Hùng Sơn - Tổng giám đốc Công ty FSI - đơn vị
-                      số hóa hàng đầu trong xây dựng chính phủ điện tử tại Việt
-                      Nam, nhận định: “Việc xây dựng chính quyền điện tử bằng
-                      cách ứng dụng công nghệ thông tin sẽ đem lại hiệu quả hoạt
-                      động cho cơ quan nhà nước, tăng cường công khai, minh bạch
-                      thông tin, cung cấp dịch vụ công tốt hơn cho người dân và
-                      doanh nghiệp. Các công nghệ, giải pháp số hóa của FSI
-                      không chỉ dừng lại ở việc góp sức hỗ trợ cho hoạt động
-                      kinh doanh của các doanh nghiệp mà còn hướng đến phục vụ
-                      cho một chính quyền điện tử - nền tảng cho một thành phố
-                      thông minh”.
-                      <br>
-                      <br>
-                      Bằng nền tảng công nghệ cốt lõi đã được triển khai thực tế
-                      và có hiệu quả, FSI hiện đang thực hiện một loạt các giải
-                      pháp số hóa phục vụ cải cách hành chính và chính quyền
-                      điện tử, như: Số hóa hồ sơ tài liệu trong xây dựng chính
-                      phủ điện tử và thành phố thông minh; số hóa hồ sơ tài liệu
-                      xây dựng các cơ sở dữ liệu chuyên ngành; công nghệ số hóa
-                      văn bản hành chính nhà nước; cổng thông tin đối thoại giữa
-                      chính quyền với người dân và doanh nghiệp…
-                      <br>
-                      <br>
-                      Ngoài ra, với tính năng nhận dạng ký tự quang học (OCR),
-                      tính năng nhận dạng ký tự viết tay (ICR), tính năng nhận
-                      dạng dấu tích (OMR) và công nghệ nhận dạng cấu trúc logic
-                      (ADRT) giúp tối ưu hóa quá trình làm việc mà các phần mềm
-                      khác trên thị trường không đáp ứng được.
-                      Với các tính năng siêu việt khi tích hợp trí tuệ nhân tạo
-                      vào các công trình xây dựng, các hệ thống điều phối thông
-                      minh sẽ điều hành giao thông, các mạng lưới thông tin năng
-                      lượng vận chuyển năng lượng và đồng thời hướng đến giảm
-                      thiểu mức tiêu thụ năng lượng dưới sự giám sát dòng dữ
-                      liệu.
-                      <br>
-                      <br>
-                      Các công nghệ thông tin và truyền thông thông minh giúp ta
-                      kết nối mạng lưới và kiểm tra mọi lĩnh vực quan trọng như
-                      giao thông, quản lý hành chính, y tế, nhà ở, giáo dục và
-                      văn hoá.
-                      <br>
-                      <br>
-                      Bên cạnh đó, Công ty Cổ phần Đầu tư thương mại và Phát
-                      triển công nghệ FSI cũng là nhà tài trợ chính cho Hội thảo
-                      “Hợp tác phát triển công nghệ thông tin - truyền thông lần
-                      thứ XXI năm 2017” với chủ đề “Nâng cao hiệu quả chính
-                      quyền điện tử, phát triển đô thị thông minh trong xu thế
-                      Cách mạng công nghiệp 4.0” diễn ra trong 3 ngày
-                      (5-7/10/2017) tại tỉnh Lào Cai với nỗ lực đem đến những
-                      giải pháp công nghệ tối ưu nhất cho các tình thành trong
-                      cả nước trong thời đại cách mạng công nghiệp 4.0.
+                    <div class="news-table active">
+                      <p>Mục lục</p>
+                      <button class="btn-toggle">
+                        [ <span>Thu gọn</span> ]
+                      </button>
+                      <div class="news-text">
+                        <p>
+                          Cục Thương mại điện tử và Công nghệ thông tin (Bộ Công Thương) cho biết, cách mạng công
+                          nghiệp lần thứ 4 đang và sẽ là xu thế lớn có tác động đến phát triển kinh tế - xã hội của
+                          tất cả các quốc gia.
+                          <br>
+                          <br>
+                          Ông Nguyễn Hùng Sơn - Tổng giám đốc Công ty FSI - đơn vị số hóa hàng đầu trong xây dựng
+                          chính phủ điện tử tại Việt Nam, nhận định: “Việc xây dựng chính quyền điện tử bằng cách ứng
+                          dụng công nghệ thông tin sẽ đem lại hiệu quả hoạt động cho cơ quan nhà nước...
+                        </p>
+                      </div>
+                    </div>
+                    <br>
+                    Cục Thương mại điện tử và Công nghệ thông tin (Bộ Công
+                    Thương) cho biết, cách mạng công nghiệp lần thứ 4 đang và
+                    sẽ là xu thế lớn có tác động đến phát triển kinh tế - xã
+                    hội của tất cả các quốc gia. Trong đó, một trong những
+                    công nghệ quan trọng phải được kể đến là dữ liệu lớn (Big
+                    Data).
+                    <br>
+                    <br>
+                    Dữ liệu lớn sẽ là yếu tố cốt lõi để sử dụng và phát triển
+                    Internet vạn vật (IoT) và trí tuệ nhân tạo (AI). Do đó,
+                    cách thu thập và khai thác dữ liệu lớn sẽ tạo ra điểm khác
+                    biệt giữa các doanh nghiệp hoạt động trên thị trường.
+                    <br>
+                    <br>
+                    Thực tế, cả Nhà nước và doanh nghiệp đều mong muốn sử dụng
+                    hiệu quả các tiến bộ công nghệ mới nhất trong xử lý Big
+                    Data để cung cấp dịch vụ ngày càng tốt hơn, đáp ứng nhu
+                    cầu của người sử dụng, hướng tới mục tiêu là phát triển và
+                    ngày càng hoàn thiện xã hội thông tin.
+                    <br>
+                    <br>
+                    Thông qua việc ứng dụng công nghệ thông tin và truyền
+                    thông kết nối các cảm biến, mạng không dây tốc độ cao, xử
+                    lý dữ liệu lớn để nâng cao chất lượng cuộc sống, cải thiện
+                    chất lượng phục vụ của chính quyền.
+                    <br>
+                    <br>
+                    <img src="./assets/img/tintuc/news-img1-tt01.png" alt="" />
+                    <br>
+                    Ông Nguyễn Hùng Sơn - Tổng giám đốc Công ty FSI - đơn vị
+                    số hóa hàng đầu trong xây dựng chính phủ điện tử tại Việt
+                    Nam, nhận định: “Việc xây dựng chính quyền điện tử bằng
+                    cách ứng dụng công nghệ thông tin sẽ đem lại hiệu quả hoạt
+                    động cho cơ quan nhà nước, tăng cường công khai, minh bạch
+                    thông tin, cung cấp dịch vụ công tốt hơn cho người dân và
+                    doanh nghiệp. Các công nghệ, giải pháp số hóa của FSI
+                    không chỉ dừng lại ở việc góp sức hỗ trợ cho hoạt động
+                    kinh doanh của các doanh nghiệp mà còn hướng đến phục vụ
+                    cho một chính quyền điện tử - nền tảng cho một thành phố
+                    thông minh”.
+                    <br>
+                    <br>
+                    Bằng nền tảng công nghệ cốt lõi đã được triển khai thực tế
+                    và có hiệu quả, FSI hiện đang thực hiện một loạt các giải
+                    pháp số hóa phục vụ cải cách hành chính và chính quyền
+                    điện tử, như: Số hóa hồ sơ tài liệu trong xây dựng chính
+                    phủ điện tử và thành phố thông minh; số hóa hồ sơ tài liệu
+                    xây dựng các cơ sở dữ liệu chuyên ngành; công nghệ số hóa
+                    văn bản hành chính nhà nước; cổng thông tin đối thoại giữa
+                    chính quyền với người dân và doanh nghiệp…
+                    <br>
+                    <br>
+                    Ngoài ra, với tính năng nhận dạng ký tự quang học (OCR),
+                    tính năng nhận dạng ký tự viết tay (ICR), tính năng nhận
+                    dạng dấu tích (OMR) và công nghệ nhận dạng cấu trúc logic
+                    (ADRT) giúp tối ưu hóa quá trình làm việc mà các phần mềm
+                    khác trên thị trường không đáp ứng được.
+                    Với các tính năng siêu việt khi tích hợp trí tuệ nhân tạo
+                    vào các công trình xây dựng, các hệ thống điều phối thông
+                    minh sẽ điều hành giao thông, các mạng lưới thông tin năng
+                    lượng vận chuyển năng lượng và đồng thời hướng đến giảm
+                    thiểu mức tiêu thụ năng lượng dưới sự giám sát dòng dữ
+                    liệu.
+                    <br>
+                    <br>
+                    Các công nghệ thông tin và truyền thông thông minh giúp ta
+                    kết nối mạng lưới và kiểm tra mọi lĩnh vực quan trọng như
+                    giao thông, quản lý hành chính, y tế, nhà ở, giáo dục và
+                    văn hoá.
+                    <br>
+                    <br>
+                    Bên cạnh đó, Công ty Cổ phần Đầu tư thương mại và Phát
+                    triển công nghệ FSI cũng là nhà tài trợ chính cho Hội thảo
+                    “Hợp tác phát triển công nghệ thông tin - truyền thông lần
+                    thứ XXI năm 2017” với chủ đề “Nâng cao hiệu quả chính
+                    quyền điện tử, phát triển đô thị thông minh trong xu thế
+                    Cách mạng công nghiệp 4.0” diễn ra trong 3 ngày
+                    (5-7/10/2017) tại tỉnh Lào Cai với nỗ lực đem đến những
+                    giải pháp công nghệ tối ưu nhất cho các tình thành trong
+                    cả nước trong thời đại cách mạng công nghiệp 4.0.
                     </p>
-                    <a href="#">
+                    <a href="#" class="list-link">
                       Nguồn :
                       http://vneconomy.vn/cuoc-song-so/cong-nghe-so-hoa-ung-dung-tri-tue-nhan-tao-phat-trien-manh-o-viet-nam-20171004092520.html
                     </a>
@@ -325,19 +346,49 @@
                       <div class="text">
                         <p>Chia sẻ</p>
                       </div>
-                      <div class="icon">
-                        <a href="#">
-                          <img src="./assets/img/tintuc/facebook.svg" alt="">
-                        </a>
-                        <a href="#">
-                          <img src="./assets/img/tintuc/linkedin.svg" alt="">
-                        </a>
-                        <a href="#">
-                          <img src="./assets/img/tintuc/linkedin.svg" alt="">
-                        </a>
-                        <a href="#">
-                          <img src="./assets/img/tintuc/link.svg" alt="">
-                        </a>
+                      <div class="list-box">
+                        <div class="icon">
+                          <a href="#" class="hvr-float">
+                            <img src="./assets/img/tintuc/facebook.svg" alt="">
+                          </a>
+                          <a href="#" class="hvr-float">
+                            <img src="./assets/img/tintuc/linkedin.svg" alt="">
+                          </a>
+                          <a href="#" class="hvr-float">
+                            <img src="./assets/img/tintuc/linkedin.svg" alt="">
+                          </a>
+                          <a href="#" class="hvr-float">
+                            <img src="./assets/img/tintuc/link.svg" alt="">
+                          </a>
+                        </div>
+                        <div class="popup-register">
+                          <a href="#register" class="hvr-float-shadow">
+                            <p>
+                              Đăng ký tư vấn
+                            </p>
+                          </a>
+                          <div id="register" class="overlay">
+                            <div class="popup">
+                              <div class="popup-box">
+                                <div class="popup-box-close">
+                                  <a class="close" href="#"><i class="ic-close"></i></a>
+                                </div>
+                                <div class="content">
+                                  <div class="content-box border-gradient">
+                                    <p>
+                                      Cảm ơn bạn đã ứng tuyển vào vị trí Nhân viên phát triển
+                                      phần
+                                      mềm (Developer)
+                                    </p>
+                                    <p>
+                                      Chúng tôi sẽ phản hồi trong thời gian sớm nhất.
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                     <div class="list-tag">
@@ -441,18 +492,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="news-video">
-                      <div class="video-img">
-                        <img src="./assets/img/tintuc/news-img10-tt01.png" alt="">
-                      </div>
-                      <div class="video-list">
-                        <p>Hành trình chuyển đổi số tại SITTO Việt Nam: “Đi nhanh hơn để tìm cơ hội thành công.”</p>
-                        <p>
-                          Sitto Việt Nam trực thuộc tập đoàn Sitto Thái Lan (Sitto Group), là đơn vị chuyên sản xuất,
-                          kinh doanh buôn bán thuốc thú y thuỷ sản và thuốc bảo vệ thực vật. Gia nhập vào thị trường
-                          Việt Nam từ năm 1999, Sitto đã nhận thấy sự phát triển của
-                        </p>
-                      </div>
+                    <div class="news-view">
+
                     </div>
                     <!-- <div class="news-posts">
                       <h4>Bài viết nổi bật</h4>
