--- a/lien-he.html
+++ b/lien-he.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="contact-row">
                   <div class="contact-row-col" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
-                    data-aos-delay="100" data-aos-offset="0">
+                    data-aos-delay="100" data-aos-offset="0" style="overflow: hidden !important;">
                     <div class="contact-info">
                       <div class="info-hotline">
                         <div class="hotline-img">
