--- a/email.html
+++ b/email.html
@@ -68,6 +68,10 @@
                                     <div class="form-input">
                                         <p>Email:</p>
                                         <p>oanhnh@ketnoiphang.com</p>
+                                        <p>oanhnh@ketnoiphang.com</p>
+                                        <p>oanhnh@ketnoiphang.com</p>
+                                        <p>oanhnh@ketnoiphang.com</p>
+                                        <p>oanhnh@ketnoiphang.com</p>
                                     </div>
                                     <div class="form-input">
                                         <p>Nội dung liên hệ:</p>
