--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -658,7 +658,7 @@
                             <a href="#"><i class="ic-left"></i></a>
                           </li>
                           <li><a href="#">1</a></li>
-                          <li class="selected"><a href="#">2</a></li>
+                          <li><a class="selected" href="#">2</a></li>
                           <li><a href="#">3</a></li>
                           <li><a href="#">4</a></li>
                           <li><a href="#">5</a></li>
@@ -1688,7 +1688,7 @@
   </div>
   </section>
   </div>
-  
+
   <footer id="footer">
     <div class="footer">
       <div class="container">
