--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -993,7 +993,7 @@
                             <a href="#"><i class="ic-left"></i></a>
                           </li>
                           <li><a href="#">1</a></li>
-                          <li class="selected"><a href="#">2</a></li>
+                          <li><a href="#" class="selected">2</a></li>
                           <li><a href="#">3</a></li>
                           <li><a href="#">4</a></li>
                           <li><a href="#">5</a></li>
@@ -1663,7 +1663,7 @@
                             <a href="#"><i class="ic-left"></i></a>
                           </li>
                           <li><a href="#">1</a></li>
-                          <li class="selected"><a href="#">2</a></li>
+                          <li><a href="#" class="selected">2</a></li>
                           <li><a href="#">3</a></li>
                           <li><a href="#">4</a></li>
                           <li><a href="#">5</a></li>
