--- a/lien-he.html
+++ b/lien-he.html
@@ -189,7 +189,7 @@
                       <div class="item-box">
                         <a
                           href="tin-tuc.html"
-                          class="selected hvr-underline-from-left"
+                          class="hvr-underline-from-left"
                         >
                           Tin tức
                         </a>
