--- a/tuyen-dung-01.html
+++ b/tuyen-dung-01.html
@@ -187,10 +187,7 @@
                     </li>
                     <li class="item">
                       <div class="item-box">
-                        <a
-                          href="tin-tuc.html"
-                          class="selected hvr-underline-from-left"
-                        >
+                        <a href="tin-tuc.html" class="hvr-underline-from-left">
                           Tin tức
                         </a>
                         <i class="ic-down"></i>
@@ -220,7 +217,10 @@
                       </ul>
                     </li>
                     <li class="item">
-                      <a href="tuyen-dung.html" class="hvr-wobble-horizontal">
+                      <a
+                        href="tuyen-dung.html"
+                        class="selected hvr-wobble-horizontal"
+                      >
                         Tuyển dụng
                       </a>
                     </li>
@@ -408,7 +408,7 @@
             <div class="location-wrap">
               <div class="location-inner">
                 <div
-                  class="location-inner-column hvr-reveal"
+                  class="location-inner-column hvr-reveal form-01"
                   data-aos="fade-zoom-in"
                   data-aos-easing="ease-in-back"
                   data-aos-delay="100"
@@ -440,7 +440,7 @@
                   </div>
                 </div>
                 <div
-                  class="location-inner-column hvr-reveal"
+                  class="location-inner-column hvr-reveal form-02"
                   data-aos="fade-zoom-in"
                   data-aos-easing="ease-in-back"
                   data-aos-delay="200"
@@ -473,7 +473,7 @@
                   </div>
                 </div>
                 <div
-                  class="location-inner-column hvr-reveal"
+                  class="location-inner-column hvr-reveal form-03"
                   data-aos="fade-zoom-in"
                   data-aos-easing="ease-in-back"
                   data-aos-delay="300"
@@ -506,7 +506,7 @@
                   </div>
                 </div>
                 <div
-                  class="location-inner-column hvr-reveal"
+                  class="location-inner-column hvr-reveal form-04"
                   data-aos="fade-zoom-in"
                   data-aos-easing="ease-in-back"
                   data-aos-delay="400"
