--- a/tuyen-dung.html
+++ b/tuyen-dung.html
@@ -145,7 +145,7 @@
                   </li>
                   <li class="item">
                     <div class="item-box">
-                      <a href="tin-tuc.html" class="selected hvr-underline-from-left">
+                      <a href="tin-tuc.html" class="hvr-underline-from-left">
                         Tin tức
                       </a>
                       <i class="ic-down"></i>
@@ -166,7 +166,7 @@
                     </ul>
                   </li>
                   <li class="item">
-                    <a href="tuyen-dung.html" class="hvr-wobble-horizontal">
+                    <a href="tuyen-dung.html" class="selected hvr-wobble-horizontal">
                       Tuyển dụng
                     </a>
                   </li>
@@ -230,7 +230,7 @@
         <div class="container">
           <div class="location-wrap">
             <div class="location-inner">
-              <div class="location-inner-column hvr-reveal" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
+              <div class="location-inner-column hvr-reveal form-01" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
                 data-aos-delay="100" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
@@ -254,7 +254,7 @@
                   </div>
                 </div>
               </div>
-              <div class="location-inner-column hvr-reveal" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
+              <div class="location-inner-column hvr-reveal form-02" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
                 data-aos-delay="200" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
@@ -278,7 +278,7 @@
                   </div>
                 </div>
               </div>
-              <div class="location-inner-column hvr-reveal" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
+              <div class="location-inner-column hvr-reveal form-03" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
                 data-aos-delay="300" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
@@ -302,7 +302,7 @@
                   </div>
                 </div>
               </div>
-              <div class="location-inner-column hvr-reveal" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
+              <div class="location-inner-column hvr-reveal form-04" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
                 data-aos-delay="400" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
